--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,8 @@
         <h5 class="white-text">Bio</h5>
         <p class="grey-text text-lighten-4">
           Je suis un développeur Français, principalement passionné par les technologies Front Web.<br/>
-          Je vous propose ici quelques projets totalement libre (MIT).<br/>
+          Je vous propose ici quelques projets totalement libres (MIT).<br/>
+          N'hésitez pas à les réexploiter ou à contribuer sans limitation !
         </p>
       </div>
       <div class="col l3 s12">
