--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,7 @@
 <body>
 
 <nav class="blue lighten-1" role="navigation">
-  <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">{{ site.title | default:
-    site.github.repository_name }}</a>
-    <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-  </div>
+  <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">{{ site.title | default: site.github.repository_name }}</a></div>
 </nav>
 <div class="container">
   <div class="section">
