--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,74 +1,58 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: " en-US" }}">
+<html lang="{{ page.lang | default: "en-US" }}">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120262655-1"></script>
   <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  window.dataLayer = window.dataLayer || []
 
-  gtag('config', 'UA-120262655-1');
+  function gtag () {dataLayer.push(arguments)}
+
+  gtag('js', new Date())
+
+  gtag('config', 'UA-120262655-1')
   </script>
 
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"/>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   {% seo %}
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <meta name="theme-color" content="#157878">
+  <meta name="theme-color" content="#157878"/>
 
   <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
   <style>
-    li ul {
-      margin-left: 1rem;
-    }
+  li ul {
+    margin-left: 1rem;
+  }
   </style>
 </head>
 <body>
 
 <nav class="blue lighten-1" role="navigation">
-  <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">{{ site.title | default: site.github.repository_name }}</a></div>
+  <div class="nav-wrapper container">
+    <a id="logo-container" href="#" class="brand-logo">{{ site.title | default: site.github.repository_name }}</a>
+    <ul class="right">
+      {% if page.lang == 'fr'%}
+      {% assign lng = 'en' %}
+      {% assign path = '/en' | append: page.url %}
+      {% else %}
+      {% assign lng = 'fr' %}
+      {% assign path = page.url | replace_first: 'en/', '' %}
+      {% endif %}
+      <li>
+        <a href="{{ path }}" style="padding-top: 5px;">
+          <img src="/assets/img/flags/{{ lng }}.svg" alt="{{ lng }}" style="height: 50px;">
+        </a>
+      </li>
+    </ul>
+  </div>
 </nav>
-<div class="container">
+<div class="container" style="min-height: 60vh">
   <div class="section">
-    <!--   Icon Section   -->
-    <div class="row">
-      {% for project in site.projects %}</li>
-      <div class="col s12 m4">
-        <div class="card sticky-action">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" style="height: 250px; width: auto; margin: auto;" src="{{ project.img }}">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">{{ project.name }}<i
-                class="material-icons right">more_vert</i></span>
-            <p class="truncate">{{ project.short_description | default: project.description }}</p>
-          </div>
-          <div class="card-action right-align">
-            {% if project.url_demo %}<a target="_blank" href="{{ project.url_demo }}">Demo</a>{% endif %}
-            <a target="_blank" href="{{ project.url }}">Github</a>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">{{ project.name }}<i class="material-icons right">close</i></span>
-            <p>{{ project.description }}
-              {% if project.techno %}
-              <h5>Languages et techno</h5>
-              <ul>
-                {% for techno in project.techno %}
-                <li>{{ techno }}</li>
-                {% endfor %}
-              </ul>
-              {% endif %}
-            </p>
-          </div>
-        </div>
-      </div>
-      {% endfor %}
-    </div>
-
+    {{ content }}
   </div>
   <br><br>
 </div>
@@ -80,12 +64,12 @@
         <h5 class="white-text">Bio</h5>
         <p class="grey-text text-lighten-4">
           Je suis un développeur Français, principalement passionné par les technologies Front Web.<br/>
-          Je vous propose ici quelques projets totalement libres (MIT).<br/>
+          Je vous propose ici quelques projets, pour la plupart totalement libres (MIT).<br/>
           N'hésitez pas à les réexploiter ou à contribuer sans limitation !
         </p>
       </div>
       <div class="col l3 s12">
-        <h5 class="white-text">Languages et techno</h5>
+        <h5 class="white-text">Languages & frameworks</h5>
         <ul>
           <li>
             <a class="white-text" href="http://php.net/">PHP</a>
@@ -108,8 +92,8 @@
       <div class="col l3 s12">
         <h5 class="white-text">Projects</h5>
         <ul>
-          {% for project in site.projects %}
-          <li><a class="white-text" href="{{ project.url }}">{{ project.name }}</a></li>
+          {% for project in site.data.projects %}
+          <li><a class="white-text">{{ project.name }}</a></li>
           {% endfor %}
         </ul>
       </div>
@@ -118,14 +102,13 @@
   <div class="footer-copyright">
     <div class="container">
       © 2017 Flûte corporation
-      <a class="grey-text text-lighten-4 right" href="#!">Besoin d'aide ?</a>
     </div>
   </div>
 </footer>
 
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <!-- Compiled and minified JavaScript -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script>
 (function ($) {
   $(function () {
